# Automated-Planning-Project

./: README.md  Untitled.txt  domain2.hddl  problem2 copy.hddl  problem2.hddl  run_plans.py  update_plan.py
carrier/: domain2.pddl  problem2.pddl
durativeaction/: domain2.pddl  problem2.pddl
htnproblem/: domain2.hddl  problem2.hddl
old/htn/: domain2.hddl  problem2.hddl
plansys2_project/: CMakeLists.txt  README.md  package.xml
plansys2_project/launch/: commands  plansys2_project.launch.py
plansys2_project/pddl/: model.pddl  problem.pddl
plansys2_project/plansys2_project/: deliver_action_node.py  emptybox_action_node.py  fillbox_action_node.py  loadcarrier_action_node.py  move_action_node.py  pickupbox_action_node.py  return_action_node.py
workstation/: domain1.pddl  problem1.pddl
