<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_project</name>
  <version>0.0.4</version>

  <description>A simple example of ROS2 Planning System</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- Needed if you have any C++ components -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>  <!-- Required for building Python packages -->

  <depend>rclcpp</depend>  
  <depend>rclpy</depend>               <!-- Dependency for Python ROS2 clients -->
  <depend>plansys2_msgs</depend>       <!-- Required for PlanSys2 messages -->
  <depend>plansys2_executor</depend>   <!-- Required for PlanSys2 executor -->
  
  <exec_depend>plansys2_bringup</exec_depend> <!-- Runtime dependencies -->
  <exec_depend>plansys2_terminal</exec_depend>

  <test_depend>ament_copyright</test_depend>   <!-- Testing and linting dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>  <!-- Specify the build type for Python packages -->
  </export>
</package>
